[ADD] Added first challenge and completed part 1

--- a/AdvantOfCode2023/AdvantOfCode2023.vcxproj.filters
+++ b/AdvantOfCode2023/AdvantOfCode2023.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="AdvantOfCode2023.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source\FirstDayResult.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header\FirstDayResult.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
