--- a/AdvantOfCode2023/AdvantOfCode2023.vcxproj
+++ b/AdvantOfCode2023/AdvantOfCode2023.vcxproj
@@ -128,6 +128,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="AdvantOfCode2023.cpp" />
+    <ClCompile Include="Source\FirstDayResult.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header\FirstDayResult.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
